# El_psy_congroo

./: .env.dev  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  init_table.sql  main.py  pyproject.toml  requirements.txt  test_requirements.txt
app/: __init__.py  config.py  exception.py  model.py
app/abc/repository/: __README__.py  cache.py  user.py
app/adapter/: abc.py
app/adapter/cache/: concrete.py
app/adapter/repository/: __init__.py
app/adapter/repository/cache/: __init__.py  concrete.py
app/adapter/repository/rdb/: __init__.py  _client.py  user.py
app/core/: models.py
app/core/model/: user.py
app/core/models/: goal.py  task.py  user.py
app/core/service/album/: __init__.py  publish.py
app/core/service/user/: __init__.py  profile.py  register.py
app/core/user/api/: view.py
app/core/user/service/: __init__.py  user_signup_service.py
app/database/: __init__.py  abc.py
app/database/model/: __init__.py  user.py
app/database/repository/: __init__.py  abc.py  user.py
app/exception/: __init__.py  auth.py
app/facade/orm/: __init__.py  abc.py  user.py
app/security/: __init__.py  auth.py  cors.py  password.py
app/security/auth/: __init__.py  abc.py  basic.py  bearer.py  cookie.py  header.py  middleware.py  role.py
app/security/jwt/: __init__.py  decoder.py  encoder.py  payload.py
app/security/jwt_/: decoder.py
app/security/token/: __init__.py  data.py  decoder.py  encoder.py
app/view/: __init__.py  swagger.py
app/view/album/: api.py
app/view/user/: __init__.py  api.py
test/: conftest.py  test_user_apply_band.py
test/unittest/user/: test_register.py
(+6 files in other folders)
