[project]
name = "el-psy-congroo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "bcrypt==4.2.1",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==24.2",
    "passlib==1.7.4",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.41.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
